k8s/dev/url-shortener/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
  namespace: url-shortener
  labels:
    app: url-shortener
    component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener
      component: api
  template:
    metadata:
      labels:
        app: url-shortener
        component: api
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: url-shortener
          image: ghcr.io/sproj/url-shortener@sha256:19af8e13853c107f1d4d63fa7075b5afdb4dc609dc67ae369bdf3353c16341ec
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
