k8s/dev/url-shortener/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: url-shortener
  labels:
    app: url-shortener
    component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener
      component: redis
  template:
    metadata:
      labels:
        app: url-shortener
        component: redis
    spec:
      containers:
        - name: redis
          image: redis:8-alpine
          ports:
            - containerPort: 6379
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
