k8s/dev/url-shortener/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: url-shortener
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jonesalan404.dev
      secretName: jonesalan404-dev-tls
  rules:
    - host: jonesalan404.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-shortener-service
                port:
                  number: 8080
          - path: /jaeger
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
